# TexasAgent

./: .gitignore  .prd-body.md  LICENSE  README.md  README.zh-CN.md  justfile  lefthook.yml  pyproject.toml
app/: main.py
app/agent/: pi_client.py
app/engine/: deck.py  game.py  hand.py  types.py
app/templates/: index.html  table.html
app/tools/: equity.py
pi-package/: package.json
pi-package/extensions/: poker-tools.ts
pi-package/scripts/: equity.py  hand_strength.py
pi-package/skills/poker-strategy/: SKILL.md
tests/: test_tools.py
tests/test_engine/: test_game.py  test_hand.py  test_types.py
